llb/tests/snapshots/snapshot__snapshot_mkdir_parents.snap
---
source: llb/tests/snapshot.rs
assertion_line: 85
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:353fa3bea183f8aefd7c3b2ae8a54160fa2a2d8baf13380ba8f1b4a03e7f3411",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "scratch://",
                        attrs: {},
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:e27fbed8dd20c12403986ec2af1c382caa3e357eeeea9897cb80cb2bb680e40d",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: -1,
                                output: 0,
                                action: Some(
                                    Mkdir(
                                        FileActionMkDir {
                                            path: "/tmp",
                                            mode: 493,
                                            make_parents: true,
                                            owner: None,
                                            timestamp: -1,
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:58f1b6f466187c9bfc52e9b3c14160e371053efa73ef37097671ac00d0a23c9a",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:353fa3bea183f8aefd7c3b2ae8a54160fa2a2d8baf13380ba8f1b4a03e7f3411": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
        "sha256:58f1b6f466187c9bfc52e9b3c14160e371053efa73ef37097671ac00d0a23c9a": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
            },
            progress_group: None,
        },
        "sha256:e27fbed8dd20c12403986ec2af1c382caa3e357eeeea9897cb80cb2bb680e40d": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {},
            progress_group: None,
        },
    },
}
