llb/tests/snapshots/snapshot__snapshot_mkfile.snap
---
source: llb/tests/snapshot.rs
assertion_line: 97
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:9aa647dc91296d2d899b491eac06d11029da423903492f56a27f12a8e553fffa",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "scratch://",
                        attrs: {},
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:e27fbed8dd20c12403986ec2af1c382caa3e357eeeea9897cb80cb2bb680e40d",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                File(
                    FileOp {
                        actions: [
                            FileAction {
                                input: 0,
                                secondary_input: -1,
                                output: 0,
                                action: Some(
                                    Mkfile(
                                        FileActionMkFile {
                                            path: "/hello",
                                            mode: 420,
                                            data: [
                                                119,
                                                111,
                                                114,
                                                108,
                                                100,
                                            ],
                                            owner: None,
                                            timestamp: -1,
                                        },
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:cd5f0817d8a858442332695d11e47a9d4d59ef43170251a306141991853628d6",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:9aa647dc91296d2d899b491eac06d11029da423903492f56a27f12a8e553fffa": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
        "sha256:cd5f0817d8a858442332695d11e47a9d4d59ef43170251a306141991853628d6": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "file.base": true,
            },
            progress_group: None,
        },
        "sha256:e27fbed8dd20c12403986ec2af1c382caa3e357eeeea9897cb80cb2bb680e40d": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {},
            progress_group: None,
        },
    },
}
