llb/tests/snapshots/snapshot__snapshot_secret_as_env.snap
---
source: llb/tests/snapshot.rs
assertion_line: 117
expression: "SnapshotDefinition::from(&def)"
---
SnapshotDefinition {
    root: "sha256:a46668f80f2772635db68c2a8185c1bfe3f2c0dd5dba95999e7a65746c64f47a",
    ops: [
        Op {
            inputs: [],
            platform: None,
            constraints: None,
            op: Some(
                Source(
                    SourceOp {
                        identifier: "docker-image://alpine:latest",
                        attrs: {
                            "image.resolvemode": "default",
                        },
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79",
                    index: 0,
                },
            ],
            platform: None,
            constraints: None,
            op: Some(
                Exec(
                    ExecOp {
                        meta: Some(
                            Meta {
                                args: [
                                    "cat",
                                    "/secrets/token",
                                ],
                                env: [],
                                cwd: "/",
                                user: "",
                                proxy_env: None,
                                extra_hosts: [],
                                hostname: "",
                                ulimit: [],
                                cgroup_parent: "",
                                remove_mount_stubs_recursive: false,
                                valid_exit_codes: [],
                            },
                        ),
                        mounts: [
                            Mount {
                                input: 0,
                                selector: "",
                                dest: "/",
                                output: 0,
                                readonly: false,
                                mount_type: Bind,
                                tmpfs_opt: None,
                                cache_opt: None,
                                secret_opt: None,
                                ssh_opt: None,
                                result_id: "",
                                content_cache: Default,
                            },
                        ],
                        network: Unset,
                        security: Sandbox,
                        secretenv: [
                            SecretEnv {
                                id: "token",
                                name: "TOKEN",
                                optional: false,
                            },
                        ],
                        cdi_devices: [],
                    },
                ),
            ),
        },
        Op {
            inputs: [
                Input {
                    digest: "sha256:01db5c922b57b1cf5a2f96dea4ad4dfb9258e082e9062ac042147db27dc6712e",
                    index: 0,
                },
            ],
            platform: Some(
                Platform {
                    architecture: "amd64",
                    os: "linux",
                    variant: "",
                    os_version: "",
                    os_features: [],
                },
            ),
            constraints: None,
            op: None,
        },
    ],
    metadata: {
        "sha256:01db5c922b57b1cf5a2f96dea4ad4dfb9258e082e9062ac042147db27dc6712e": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "exec.meta.base": true,
                "exec.secretenv": true,
            },
            progress_group: None,
        },
        "sha256:5e7cb1727f220679d2570d6fdb86f48af3b050e2152c8aa0d30ebebeb4815b79": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "source.image": true,
            },
            progress_group: None,
        },
        "sha256:a46668f80f2772635db68c2a8185c1bfe3f2c0dd5dba95999e7a65746c64f47a": OpMetadata {
            ignore_cache: false,
            description: {},
            export_cache: None,
            caps: {
                "constraints": true,
                "platform": true,
            },
            progress_group: None,
        },
    },
}
